@@ -1,6 +1,7 @@
 network-manager-applet (1.0.10-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Rebase patches.
 
  -- Michael Biebl <biebl@debian.org>  Thu, 24 Dec 2015 01:07:48 +0100
 
